# speechsquad

./: .gitignore  CONTRIBUTING.md  CREDITS.md  Dockerfile  Dockerfile.client  LICENSE  README.md
client/: CMakeLists.txt  README.md  audio_task.cc  audio_task.h  main.cc  speech_squad_client.cc  speech_squad_client.h  squad_eval_dataset.cc  squad_eval_dataset.h  status.cc  status.h  stream.h  sync_queue.h  utils.cc  utils.h  wave_file_writer.cc  wave_file_writer.h
helm/speech-squad/: Chart.yaml  values.yaml
helm/speech-squad/templates/: _helpers.tpl  artifactSecret.yaml  deployment.yaml  ingress.yaml  registrySecret.yaml  service.yaml
reference/: README.md  speech_squad.proto
reference/asr/: .bazelrc  BUILD  Dockerfile  README.md  WORKSPACE  cpu_asr_grpc.cc  cpu_asr_grpc.h  grpc_extra_deps.bzl  kaldi_asr.cc  kaldi_asr.conf  kaldi_asr.h  server.cc  wav_reader.cc  wav_reader.h
reference/asr/proto/: BUILD  audio.proto  jarvis_asr.proto
reference/asr/scripts/: download_kaldi_data.sh
reference/qa/: Dockerfile  jarvis_nlp_pb2.py  jarvis_nlp_pb2_grpc.py  requirements.txt  run_codegen.py  serve.py  test_qa.py
reference/qa/proto/: jarvis_nlp.proto
reference/qa/protos/: jarvis_nlp.proto
server/: CMakeLists.txt  README.md  clients.cc  clients.h  context.cc  context.h  main.cc  resources.cc  resources.h  settings.h
server/proto/: jarvis_asr.proto  jarvis_tts.proto  riva_asr.proto  riva_tts.proto
